lib/bait/tests/inout_error/enum/not_expecting_enum.out
lib/bait/tests/inout_error/enum/not_expecting_enum.in.bt:7:5 error: expected type is not an enum, got i32
