lib/bait/tests/inout_error/enum/not_expecting_enum.in.bt
enum Color{
	red
	blue
}

mut c := 123
c = .red
